--- a/paam-backend/docker-compose.yml
+++ b/paam-backend/docker-compose.yml
@@ -6,13 +6,14 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./:/usr/src/app
+      - ./:/app
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
     command: bash -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir app"
     depends_on:
       - redis
+    restart: always
 
   redis:
     image: redis
