--- a/paam-backend/requirements.txt
+++ b/paam-backend/requirements.txt
@@ -4,15 +4,41 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
 attrs==24.3.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+dataclasses-json==0.6.7
+distro==1.9.0
 fastapi==0.115.6
 frozenlist==1.5.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 iniconfig==2.0.0
+jiter==0.8.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.13
+langchain-community==0.3.13
+langchain-core==0.3.28
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.4
+langgraph==0.2.60
+langgraph-checkpoint==2.0.9
+langgraph-sdk==0.1.48
+langsmith==0.2.6
+marshmallow==3.23.2
+msgpack==1.1.0
 multidict==6.1.0
+mypy-extensions==1.0.0
 numpy==2.2.1
+openai==1.58.1
+orjson==3.10.12
 packaging==24.2
 pandas==2.2.3
 patsy==1.0.1
@@ -26,14 +52,24 @@ pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+PyYAML==6.0.2
 redis==5.2.1
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
 scipy==1.14.1
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
 starlette==0.41.3
 statsmodels==0.14.4
+tenacity==9.0.0
+tiktoken==0.8.0
+tqdm==4.67.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
 uvicorn==0.34.0
-XlsxWriter==3.2.0
 yarl==1.18.3
