--- a/paam-backend/docker-compose.yml
+++ b/paam-backend/docker-compose.yml
@@ -1,21 +1,37 @@
 services:
   app:
     build: .
+    container_name: paam-app-container
     env_file:
       - .env
     ports:
       - 8000:8000
+    # environment:
+    #   REDIS_HOST: redis
+    #   REDIS_PORT: 6379
     volumes:
       - ./:/app
-    environment:
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
     command: bash -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir app"
     depends_on:
       - redis
+      - postgres
     restart: always
 
   redis:
     image: redis
+    container_name: redis-container
     ports:
       - 6379:6379
+
+  postgres:
+    image: postgres
+    container_name: postgres-container
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=01883234194abc
+      - POSTGRES_DB=paam_db
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
