--- a/paam-backend/requirements.txt
+++ b/paam-backend/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
+asttokens==3.0.0
 attrs==24.3.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
@@ -10,8 +11,12 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+comm==0.2.2
 dataclasses-json==0.6.7
+debugpy==1.8.11
+decorator==5.1.1
 distro==1.9.0
+executing==2.1.0
 fastapi==0.115.6
 frozenlist==1.5.0
 h11==0.14.0
@@ -20,6 +25,9 @@ httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
 jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -30,29 +38,41 @@ langchain-openai==0.2.14
 langchain-text-splitters==0.3.4
 langgraph==0.2.60
 langgraph-checkpoint==2.0.9
+langgraph-checkpoint-postgres==2.0.9
 langgraph-sdk==0.1.48
 langsmith==0.2.6
 marshmallow==3.23.2
+matplotlib-inline==0.1.7
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 numpy==2.2.1
 openai==1.58.1
 orjson==3.10.12
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 patsy==1.0.1
+platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.48
 propcache==0.2.1
+psutil==6.1.1
+psycopg==3.2.3
+psycopg-pool==3.2.4
+pure_eval==0.2.3
 pydantic==2.10.4
 pydantic-settings==2.7.0
 pydantic_core==2.27.2
+Pygments==2.18.0
 pyreadstat==1.2.8
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
@@ -62,14 +82,18 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
+stack-data==0.6.3
 starlette==0.41.3
 statsmodels==0.14.4
 tenacity==9.0.0
 tiktoken==0.8.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 uvicorn==0.34.0
+wcwidth==0.2.13
 yarl==1.18.3
