--- a/paam-backend/Dockerfile
+++ b/paam-backend/Dockerfile
@@ -17,4 +17,9 @@ COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN mkdir -p /uploads
+
+# Cấp quyền cho thư mục
+RUN chmod -R 777 /uploads
+
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
