--- a/paam-backend/docker-compose.yml
+++ b/paam-backend/docker-compose.yml
@@ -6,15 +6,12 @@ services:
       - .env
     ports:
       - 8000:8000
-    # environment:
-    #   REDIS_HOST: redis
-    #   REDIS_PORT: 6379
     volumes:
       - ./:/app
     command: bash -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir app"
     depends_on:
       - redis
-      - postgres
+      # - postgres
     restart: always
 
   redis:
@@ -23,15 +20,15 @@ services:
     ports:
       - 6379:6379
 
-  postgres:
-    image: postgres
-    container_name: postgres-container
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=01883234194abc
-      - POSTGRES_DB=paam_db
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-volumes:
-  pgdata:
+#   postgres:
+#     image: postgres
+#     container_name: postgres-container
+#     ports:
+#       - "5432:5432"
+#     environment:
+#       - POSTGRES_PASSWORD=01883234194abc
+#       - POSTGRES_DB=paam_db
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data
+# volumes:
+#   pgdata:
